--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
       <version>2.5</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql8</artifactId>
+      <version>8.0.12</version>
+    </dependency>
+
   </dependencies>
 
   <build>
