--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>4.1.4.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-expression</artifactId>
       <version>4.1.4.RELEASE</version>
     </dependency>
@@ -154,5 +159,17 @@
         </configuration>
       </plugin>
     </plugins>
+
+    <resources>
+      <resource>
+        <directory>src/main/resource</directory>
+           <includes>
+               <include>**/*.xml</include>
+               <include>**/*.dic</include>
+               <include>**/*.properties</include>
+           </includes>
+      </resource>
+    </resources>
+
   </build>
 </project>
