--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
         <artifactId>tomcat7-maven-plugin</artifactId>
         <configuration>
           <port>8099</port>
-          <path>/ChenZone</path>
+          <path>/</path>
         </configuration>
       </plugin>
     </plugins>
