--- a/src/main/webapp/static/src4js/package.json
+++ b/src/main/webapp/static/src4js/package.json
@@ -4,7 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-es2015": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^16.5.2",
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9"
+  },
+  "scripts": {
+    "up": "webpack-dev-server --inline"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.2"
   }
 }
