--- a/src/main/webapp/static/src4js/package.json
+++ b/src/main/webapp/static/src4js/package.json
@@ -4,11 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
+    "@material-ui/core": "^3.2.2",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "6.24.1",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.5.2",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-hot-loader": "^4.3.11",
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9"
   },
@@ -16,6 +20,7 @@
     "up": "webpack-dev-server --inline"
   },
   "devDependencies": {
+    "babel-preset-env": "1.6.1",
     "webpack-cli": "^3.1.2"
   }
 }
