--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -1,44 +1,16 @@
-#log4j.rootLogger=INFO, dufLog
-#
-##Console
-#log4j.appender.Console=org.apache.log4j.ConsoleAppender
-#log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-#log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
-log4j.rootLogger=INFO,dailyFile,console
+# rootLogger参数分别为：根Logger级别，输出器stdout，输出器log
+log4j.rootLogger = info,stdout,log
 
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-Console output
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.ImmediateFlush=true
-log4j.appender.console.Target=System.out
-#log4j.appender.console.encoding=UTF-8
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %m%n%n
+# 输出信息到控制台
+log4j.appender.stdout = org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern = %d [%-5p] %l %rms: %m%n
 
-#log4j.logger.error=error
-#log4j.appender.error=org.apache.log4j.RollingFileAppender   
-#log4j.appender.error.File=${rootpath}WEB-INF/logfiles/logerror/logerror
-#log4j.appender.error.Append=true   
-#log4j.appender.error.Threshold =ERROR
-#log4j.appender.error.layout=org.apache.log4j.PatternLayout   
-#log4j.appender.error.layout.ConversionPattern=[ %p ]  %-d{yyyy-MM-dd HH:mm:ss} [%F:%L]  %m%n
-
-###DEBUG,ERROR
-log4j.logger.java.sql.ResultSet=dufLog
-log4j.logger.org.apache=dufLog
-###DEBUG,ERROR
-log4j.logger.java.sql.Connection=dufLog
-
-log4j.logger.java.sql.Statement=dufLog
-log4j.logger.java.sql.PreparedStatement=dufLog 
-
-
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout 
-#log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n 
-
-log4j.appender.dufLog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.dufLog.File=${webapp.root}WEB-INF/logfiles/logcase/logcase
-log4j.appender.dufLog.DatePattern = '_'yyyy-MM-dd-HH'.log'
-log4j.appender.dufLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.dufLog.layout.ConversionPattern=%d%n%m%n
+# 输出DEBUG级别以上的日志到D://logs/debug.log
+log4j.appender.log = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.log.DatePattern = '.'yyyy-MM-dd
+log4j.appender.log.File = D://ChenZone/debug.log
+log4j.appender.log.Encoding = UTF-8
+#log4j.appender.log.Threshold = INFO
+log4j.appender.log.layout = org.apache.log4j.PatternLayout
+log4j.appender.log.layout.ConversionPattern = %d [%-5p] (%c.%t): %m%n
