--- a/pom.xml
+++ b/pom.xml
@@ -118,10 +118,11 @@
       <scope>provided</scope>
     </dependency>
 
+
     <dependency>
-      <groupId>com.mysql</groupId>
-      <artifactId>mysql8</artifactId>
-      <version>8.0.12</version>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.6</version>
     </dependency>
     <dependency>
       <groupId>com.alibaba</groupId>
