--- a/src/main/webapp/static/src4js/package.json
+++ b/src/main/webapp/static/src4js/package.json
@@ -5,14 +5,22 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^3.2.2",
+    "@material-ui/icons": "^3.0.1",
+    "antd": "^3.10.2",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-import": "^1.10.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.24.1",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "^4.3.11",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9"
   },
