--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,19 @@
       <version>1.7.6</version>
     </dependency>
 
+    <dependency>
+      <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.12.1</version>
+    </dependency>
+  <!--获取视频封面 -->
+    <dependency>
+      <groupId>org.bytedeco</groupId>
+      <artifactId>javacv-platform</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
 
   </dependencies>
 
