--- a/src/main/webapp/static/src4js/package.json
+++ b/src/main/webapp/static/src4js/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.24.1",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "16.2.0",
@@ -21,14 +22,16 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.20.2",
-    "webpack-dev-server": "^3.1.9"
+    "video-react": "^0.14.1",
+    "webpack": "^4.41.0",
+    "webpack-bundle-analyzer": "^3.5.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
     "up": "webpack-dev-server --inline"
   },
   "devDependencies": {
-    "babel-preset-env": "1.6.1",
-    "webpack-cli": "^3.1.2"
+    "babel-preset-env": "1.6.1"
   }
 }
