--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,18 @@
       <artifactId>javacv-platform</artifactId>
       <version>1.3.1</version>
     </dependency>
+<!--附件上传-->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+    </dependency>
 
 
   </dependencies>
