--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,22 @@
       <version>2.5</version>
     </dependency>
 
+    <!-- html转 pdf-->
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>html2pdf</artifactId>
+      <version>2.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>font-asian</artifactId>
+      <version>7.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>barcodes</artifactId>
+      <version>7.1.2</version>
+    </dependency>
 
   </dependencies>
 
