--- a/src/main/webapp/static/src4js/package.json
+++ b/src/main/webapp/static/src4js/package.json
@@ -19,6 +19,7 @@
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-hot-loader": "^4.3.11",
+    "react-redux": "^7.1.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "style-loader": "^0.23.1",
