--- a/src/main/webapp/static/src4js/package.json
+++ b/src/main/webapp/static/src4js/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
     "antd": "^3.19.2",
+    "antd-mobile": "^2.3.1",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-import": "^1.10.0",
