--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,16 @@
       <artifactId>spring-web</artifactId>
       <version>4.1.4.RELEASE</version>
     </dependency>
+
+    <dependency>
+
+      <groupId>org.apache.poi</groupId>
+
+      <artifactId>poi-ooxml</artifactId>
+
+      <version>3.15-beta2</version>
+
+    </dependency>
     <!--
     <dependency>
       <groupId>org.mybatis</groupId>
