--- a/src/main/resource/db.properties
+++ b/src/main/resource/db.properties
@@ -4,5 +4,5 @@
 validationQuery=SELECT 1 
 jdbc_url=jdbc:mysql://localhost:3306/chenzone?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
 jdbc_username=root
-jdbc_password=123456
+jdbc_password=12345678
 jdbc_driver=com.mysql.jdbc.Driver
