--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ src/main/webapp/WEB-INF/chenzone/movie
 src/main/webapp/static/src4js/.vscode
 src/main/webapp/static/src4js/node_modules
 .DS_Store
+/log
